--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,6 +6,9 @@ on:
   pull_request:
     branches: [ main ]
 
+env:
+  MASTER_PASSWORD: ${{ secrets.MASTER_PASSWORD }}
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -20,4 +23,3 @@ jobs:
         run: mvn -B package --file pom.xml
       - name: Run tests
         run: mvn test
-
