--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,25 +1,52 @@
-name: Test
+name: Run Tests
 
 on:
   push:
-    branches: [ main ]
+    branches:
+      - main
   pull_request:
-    branches: [ main ]
-
-env:
-  MASTER_PASSWORD: ${{ secrets.MASTER_PASSWORD }}
+    branches:
+      - main
 
 jobs:
-  build:
+  test:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v4
-      - name: Set up JDK 22
-        uses: actions/setup-java@v4
+      # 1. Checkout do repositório
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      # 2. Configurar JDK
+      - name: Set up JDK 21
+        uses: actions/setup-java@v3
         with:
-          java-version: '22'
           distribution: 'temurin'
-      - name: Build with Maven
-        run: mvn -B package --file pom.xml
-      - name: Run tests
-        run: mvn test
+          java-version: '21'
+
+      # 3. Setar variáveis de ambiente
+      - name: Set environment variables
+        env:
+          MASTER_PASSWORD: ${{ secrets.MASTER_PASSWORD }}
+          IS_TEST_ENV: true
+        run: echo "Environment variables set."
+
+      # 4. Instalar dependências
+      - name: Install dependencies
+        run: mvn dependency:resolve
+
+      # 5. Debug do ambiente
+      - name: Debug Environment
+        run: |
+          echo "Java Version:"
+          java -version
+          echo "Maven Version:"
+          mvn -v
+          echo "Environment Variables:"
+          printenv
+          echo "File System:"
+          ls -la
+
+      # 6. Executar os testes
+      - name: Run Tests
+        run: mvn clean test -X
