--- a/.github/workflows/codacy.yml
+++ b/.github/workflows/codacy.yml
@@ -34,6 +34,6 @@ jobs:
           max-allowed-issues: 2147483647
 
       - name: Upload SARIF results file
-        uses: codacy/codacy-analysis-cli-action@v4
+        uses: codacy/codacy-analysis-cli-action@d840f886c4bd4edc059706d09c6a1586111c540b
         with:
           sarif_file: results.sarif
