--- a/.github/workflows/snyk.yml
+++ b/.github/workflows/snyk.yml
@@ -15,8 +15,10 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Extract Java version from pom.xml
-        id: java_version
-        run: echo "JAVA_VERSION=$(xmllint --xpath '/*[local-name()=\"project\"]/*[local-name()=\"properties\"]/*[local-name()=\"maven.compiler.source\"]/text()' pom.xml)" >> $GITHUB_ENV
+        id: extract_java_version
+        run: |
+          JAVA_VERSION=$(xmllint --xpath "/*[local-name()='project']/*[local-name()='properties']/*[local-name()='maven.compiler.source']/text()" pom.xml 2>/dev/null || echo "17")
+          echo "JAVA_VERSION=$JAVA_VERSION" >> $GITHUB_ENV
       
       - name: Set up Java
         uses: actions/setup-java@v4
