--- a/.github/workflows/dependency-check.yml
+++ b/.github/workflows/dependency-check.yml
@@ -39,6 +39,8 @@ jobs:
           path: '.'
           format: 'HTML'
           out: 'reports'
+        env:
+          JAVA_HOME: ${{ env.JAVA_HOME_21_X64 }}
 
       - name: Upload Dependency-Check report as an artifact
         uses: actions/upload-artifact@v4
