--- a/.github/workflows/dependency-check.yml
+++ b/.github/workflows/dependency-check.yml
@@ -39,7 +39,7 @@ jobs:
 
       - name: Run OWASP Dependency-Check
         run: |
-          $HOME/dc/dependency-check/bin/dependency-check.sh --project "Secure_Password_Manager" --scan . --format HTML --out reports
+          $HOME/dc/dependency-check/bin/dependency-check.sh --project "Secure_Password_Manager" --scan . --format HTML --out reports --disableAssembly
 
       - name: Upload Dependency-Check report as an artifact
         uses: actions/upload-artifact@v4
